# EchoV3

./: .env.example  .gitignore  .secrets.baseline  docker-compose.yml
echo/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
echo/application/: calendar_provider_factory.py  gmail_provider_factory.py  model_gateway_factory.py  portfolio_provider_factory.py  research_provider_factory.py
echo/application/capabilities/: calendar_read.py  current_time.py  email_read.py
echo/application/orchestrators/: calendar_writes.py  conversation.py  email_intelligence.py  email_writes.py  insider_intelligence.py  memory_extraction.py  monitoring.py  news_intelligence.py  project_memory.py  trust.py
echo/application/queries/: dashboard_query.py  trust_dashboard_query.py
echo/apps/api/: dependencies.py  main.py
echo/apps/api/routes/: approvals.py  calendar.py  conversations.py  dashboard.py  email.py  memory.py  portfolio.py  projects.py  research.py  system.py  trust.py
echo/apps/api/schemas/: approvals.py  calendar.py  conversations.py  dashboard.py  email.py  memory.py  portfolio.py  projects.py  research.py  system.py  trust.py
echo/apps/scheduler/: main.py
echo/apps/worker/: main.py
echo/core/capabilities/: __init__.py  contracts.py
echo/core/config/: settings.py
echo/core/errors/: __init__.py  base.py
echo/core/events/: __init__.py  envelope.py
echo/core/identifiers/: __init__.py  generator.py
echo/core/jobs/: __init__.py  envelope.py
echo/core/logging/: setup.py
echo/core/observability/: __init__.py  correlation.py
echo/core/provenance/: __init__.py  records.py
echo/core/security/: __init__.py  permissions.py
echo/core/time/: __init__.py  clock.py
echo/domains/approvals/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py
echo/domains/calendar/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py  write_adapters.py
echo/domains/capabilities/: errors.py  models.py  policies.py  service.py
echo/domains/conversation/: errors.py  events.py  interfaces.py  repository.py  schemas.py  service.py
echo/domains/email/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py  write_adapters.py
echo/domains/memory/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py
echo/domains/portfolio/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py
echo/domains/projects/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py
echo/domains/research/: errors.py  policies.py  repository.py  schemas.py  service.py
echo/domains/system/: errors.py  models.py  policies.py  repository.py  schemas.py  service.py
echo/infrastructure/database/: base.py  engine.py
echo/infrastructure/database/repositories/: audit.py  jobs.py  observability.py  provenance.py
echo/infrastructure/database/tables/: __init__.py  audit.py  jobs.py  observability.py  provenance.py
echo/infrastructure/secrets/: encryption.py
echo/migrations/: env.py
echo/migrations/versions/: 178a3aa6f225_add_research_insider_transactions_table.py  2c4a6f1f40ac_add_research_issuer_security_master_and_.py  2e076dc218c5_add_memory_records.py  4cedcd27f7b8_phase26_voice_preparation.py  5c5a4aaebb3b_add_projects_domain_tables.py  5d13b69d13f9_phase27_paper_trading_observation.py  77dfbc4c290e_phase24_system_monitors_alerts_.py  7bcc3d9516b3_initial_schema.py  828b1a984fe2_phase25_trust_dashboard_observability.py  a1e6f3c8b4d2_phase20_21_email_foundation.py  c5cc4bddcf30_add_portfolio_and_schwab_tables.py  c8b922403a16_add_conversation_sessions_and_messages.py  ca48be532116_add_approval_proposals_and_decisions.py  d5ef2020051d_add_portfolio_ips_and_compliance_tables.py  ddf1d17cc80b_add_calendar_credentials_and_events.py  e3a9da5ce684_add_research_politician_transactions_.py  fa5789a64cf5_add_research_news_article_digest_and_.py
echo/providers/calendar/google/: adapter.py
echo/providers/email/gmail/: adapter.py
echo/providers/models/: contracts.py  escalation.py  gateway.py
echo/providers/models/claude/: adapter.py  pricing.py
echo/providers/models/ollama/: adapter.py
echo/providers/research/congress_legislators/: adapter.py
echo/providers/research/finnhub/: adapter.py
echo/providers/research/sec_edgar/: adapter.py
echo/providers/research/senate_efd/: adapter.py
echo/providers/schwab/: adapter.py
echo/scripts/: check_architecture.py  check_size_limits.py  run_provider_evaluation.py
echo/scripts/provider_evaluation/: clients.py  metrics.py  report.py  runner.py
echo/tests/architecture/: test_import_boundaries.py
echo/tests/integration/: conftest.py  test_approval_service_with_real_repositories.py  test_audit_repository.py  test_calendar_repository.py  test_capability_executor_with_real_repository.py  test_conversation_repository.py  test_email_repository.py  test_job_repository.py  test_memory_extraction_live.py  test_memory_repository.py  test_observability_repository.py  test_ollama_adapter_live.py  test_portfolio_repository.py  test_projects_repository.py  test_provenance_repository.py  test_research_repository.py  test_system_repository.py  test_transaction_boundaries.py
echo/tests/unit/: test_api_health.py  test_check_size_limits.py  test_error_handling.py
echo/tests/unit/application/orchestrators/: fakes.py  test_calendar_writes.py  test_conversation_orchestrator.py  test_conversation_voice.py  test_email_intelligence.py  test_email_writes.py  test_insider_intelligence.py  test_memory_extraction_orchestrator.py  test_monitoring.py  test_news_intelligence.py  test_project_memory.py  test_trust.py
echo/tests/unit/application/queries/: fakes.py  test_dashboard_query.py  test_trust_dashboard_query.py
echo/tests/unit/core/: test_capability_contract.py  test_clock.py  test_config.py  test_correlation.py  test_errors.py  test_event_envelope.py  test_identifiers.py  test_job_envelope.py  test_logging.py  test_permissions.py  test_provenance.py
echo/tests/unit/domains/approvals/: fakes.py  test_approval_policies.py  test_approval_service.py
(+83 files in other folders)
