[project]
name = "echo"
version = "0.1.0"
description = "Echo personal AI operating system — backend, worker, and scheduler (shared codebase, per ADR_0001)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    # fastapi's own starlette requirement (>=0.46.0) is unbounded and would
    # accept the vulnerable 0.46.2 already on disk (pip-audit: PYSEC-2026-
    # 161/248/249/1941/1942/2280/2281) unless pinned explicitly here.
    "starlette>=0.47.2",
    "uvicorn[standard]>=0.32,<0.33",
    "asyncpg>=0.30,<0.31",
    "redis>=5.1,<5.2",
    "httpx>=0.27,<0.28",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "anthropic>=0.40,<1.0",
    # Symmetric encryption for OAuth tokens at rest (Docs/SECURITY.md:
    # "Secrets ... are stored in secure secret management ... and encrypted
    # at rest") — Fernet (AES-128-CBC + HMAC), not hand-rolled crypto.
    # >=48.0.1 specifically: pip-audit flagged 43.0.3 for GHSA-537c-gmf6-5ccf
    # (a vulnerable statically-linked OpenSSL bundled in the wheel, fixed in
    # 48.0.1) plus three related PYSEC advisories on the same range.
    "cryptography>=48.0.1,<49",
    # Parses the unitedstates/congress-legislators reference dataset
    # (Phase 19) — that project ships YAML, not JSON, as its primary format.
    "pyyaml>=6.0,<7.0",
    # Parses the Senate eFD system's real transaction table HTML (Phase 19)
    # — regex-scraping real, moderately nested government HTML (comment
    # divs, inline links) is fragile; a real parser is the honest tool here,
    # same reasoning as using stdlib xml.etree for Phase 18's Form 4 XML.
    "beautifulsoup4>=4.12,<5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.12,<1.13",
    # pytest 8.3.5 has PYSEC-2026-1845; fixed in 9.0.3. pytest-asyncio's pin
    # is relaxed to match — 0.24.0 caps pytest below the fixed version.
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0,<6.0",
    "vulture>=2.13,<2.14",
    "bandit>=1.7,<1.8",
    "pip-audit>=2.7,<2.8",
    "detect-secrets>=1.5,<1.6",
    "types-redis>=4.6,<5.0",
    "types-PyYAML>=6.0,<7.0",
    "types-beautifulsoup4>=4.12,<5.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "core*", "infrastructure*", "domains*", "providers*", "application*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle core; I: import sort; C90: mccabe complexity
# (used in place of a separate Radon dependency — same metric family, one
# fewer tool to pin/maintain; see Docs/DECISION_LOG.md).
select = ["E", "F", "I", "C90", "B", "UP"]
mccabe.max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends() is specifically designed to sit in a default argument
# (it's how FastAPI's DI resolves per-request) — B008 exists to catch
# accidental mutable-default footguns, not this. This is FastAPI's own
# documented workaround, not a project-specific suppression.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
# asyncpg ships no py.typed marker / stubs (a known upstream gap, not an
# Echo code issue) — acknowledged here at the config level rather than
# suppressed with per-line ignores.
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["apps", "core", "infrastructure", "domains", "providers", "application"]
omit = ["tests/*"]

[tool.vulture]
paths = ["apps", "core", "infrastructure", "domains", "providers", "application", "scripts"]
min_confidence = 80

[tool.bandit]
exclude_dirs = ["tests"]
